<resources>
    <string name="app_name" translatable="false">MiDoze</string>
    <string name="compatibility_mode">Compatibility mode</string>

    <string name="feed_snackbar_load_from_title">Load from cache?</string>

    <string name="update_dialog_title">Update available</string>
    <string name="update_dialog_button">Update</string>

    <string name="title_mi_band" translatable="false">Mi Band</string>
    <string name="title_zepp" translatable="false">Zepp</string>

    <string name="firmware_version">Firmware version</string>
    <string name="search">Search</string>

    <string name="feed_title">Feed</string>
    <string name="settings_feed_ignore_cached_items">Ignore cached items</string>
    <string name="settings_feed_ignore_cached_items_summary">Always request up-to-date data</string>
    <string name="settings_feed_cache_clear">Clear feed cache</string>
    <string name="settings_feed_cache_cleared">Cleared</string>

    <string name="feed_connectivity_error">Connectivity error</string>
    <string name="feed_devices_not_found">Devices not found</string>

    <string name="firmware_download">Download</string>
    <string name="firmware_changelog">Changelog</string>
    <string name="firmware_languages">Languages</string>
    <string name="downloading_toast">Downloading…</string>
    <string name="firmware_not_found">Not found</string>
    <string name="firmware_try_switch_region">Try switching the region</string>
    <string name="firmware_share">Share</string>
    <string name="extras_device_source" translatable="false">deviceSource</string>
    <string name="extras_production_source" translatable="false">productionSource</string>
    <string name="extras_app_name" translatable="false">appname</string>
    <string name="extras_app_version" translatable="false">appVersion</string>
    <string name="extras_app_data">Insert app data</string>
    <string name="extras_import_button">Import</string>

    <string name="settings_title">Settings</string>
    <string name="settings_dark_mode">Dark mode</string>

    <string name="settings_custom_request">Request</string>
    <string name="settings_server_response">Server response</string>

    <string name="filters_title">Filters</string>
    <string name="filters_host_title">Host</string>
    <string name="filters_region_title">Region</string>
    <string name="filters_app_title">Application</string>
    <string name="filters_advanced_title">Advanced</string>
    <string name="filters_request_region">Request region</string>
    <string name="filters_request_host">Request host</string>
    <string name="filters_request_app_name">Pretend to be like app</string>
    <string name="filters_request_deviceSource_range">Set deviceSource value range</string>
    <string name="filters_request_productionSource_range">Set productionSource value range</string>
    <string name="filters_request_zepp_app_version">Zepp app version</string>
    <string name="filters_request_zepp_app_version_value" translatable="false">6.10.1-play_100770</string>
    <string name="filters_request_zepp_life_app_version">Zepp Life app version</string>
    <string name="filters_request_zepp_life_app_version_value" translatable="false">6.2.1_50602</string>
    <string name="filters_app_version_load_defaults">Load versions defaults</string>
    <string name="filters_show_unknown_devices">Show unknown devices only</string>

    <string name="settings_firmwares_title">Firmwares</string>
    <string name="settings_firmwares_show_changelog">Show update changelog</string>
    <string name="settings_firmwares_show_changelog_summary">For supported devices</string>
    <string name="settings_firmwares_show_languages">Show supported languages</string>
    <string name="settings_firmwares_show_languages_summary">Show supported language list</string>

    <string name="settings_about_title">About</string>
    <string name="settings_about_summary" translatable="false">Keddnyo, Schakal</string>
    <string name="settings_app_check_for_updates">Check for updates</string>

    <string name="request_host_first" translatable="false">api.amazfit.com</string>
    <string name="request_host_second" translatable="false">api-mifit-ru.huami.com</string>
    <string name="request_host_third" translatable="false">api-mifit-us2.huami.com</string>

    <string-array name="request_host_entries">
        <item>@string/request_host_first</item>
        <item>@string/request_host_second</item>
        <item>@string/request_host_third</item>
    </string-array>
    <string-array name="request_host_selector_entryValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="request_region_entries">
        <item>USA</item>
        <item>China</item>
        <item>Russia</item>
        <item>UAE</item>
    </string-array>
    <string-array name="request_region_selector_entryValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="zepp_app_name" translatable="false">Zepp</string>
    <string name="zepp_life_app_name" translatable="false">Zepp Life</string>
    <string name="zepp_app_name_value" translatable="false">com.huami.midong</string>
    <string name="zepp_life_app_name_value" translatable="false">com.xiaomi.hm.health</string>

    <string-array name="request_app_name_entries">
        <item>@string/zepp_app_name</item>
        <item>@string/zepp_life_app_name</item>
    </string-array>
    <string-array name="request_app_name_entryValues">
        <item>Zepp</item>
        <item>ZeppLife</item>
    </string-array>
</resources>