<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:asp="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/filters_host_title">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/request_host_entries"
            app:entryValues="@array/request_host_selector_entryValues"
            app:icon="@drawable/ic_request_host"
            app:key="filters_request_host"
            app:title="@string/filters_request_host"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/filters_region_title">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/request_region_entries"
            app:entryValues="@array/request_region_selector_entryValues"
            app:icon="@drawable/ic_request_region"
            app:key="filters_request_region"
            app:title="@string/filters_request_region"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/filters_app_title">

        <ListPreference
            app:defaultValue="Zepp"
            app:entries="@array/request_app_name_entries"
            app:entryValues="@array/request_app_name_entryValues"
            app:icon="@drawable/ic_pretend_app"
            app:key="filters_feed_app_name"
            app:title="@string/filters_request_app_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/filters_request_zepp_app_version_value"
            app:icon="@drawable/ic_zepp_app"
            app:key="filters_feed_zepp_app_version"
            app:title="@string/filters_request_zepp_app_version"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/filters_request_zepp_life_app_version_value"
            app:icon="@drawable/ic_app_zepp_life"
            app:key="filters_feed_zepp_life_app_version"
            app:title="@string/filters_request_zepp_life_app_version"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/filters_advanced_title">

        <SeekBarPreference
            asp:max="350"
            app:defaultValue="95"
            app:icon="@drawable/ic_device_source_range"
            app:key="filters_feed_deviceSource_range"
            app:min="30"
            app:showSeekBarValue="true"
            app:title="@string/filters_request_deviceSource_range" />

        <SeekBarPreference
            asp:max="270"
            app:defaultValue="257"
            app:icon="@drawable/ic_device_source_range"
            app:key="filters_feed_productionSource_range"
            app:min="256"
            app:showSeekBarValue="true"
            app:title="@string/filters_request_productionSource_range" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_unknown"
            app:key="filters_show_unknown_devices"
            app:title="@string/filters_show_unknown_devices" />

    </PreferenceCategory>

</PreferenceScreen>